--- a/packages/preview/src/styles/_core.scss
+++ b/packages/preview/src/styles/_core.scss
@@ -4,6 +4,7 @@
 
 :root {
   --color-brand: #e91e63;
+  --color-brand-light: rgba(233, 30, 99, 0.3);
   --color-link: #1971c2;
   --color-brand-rgb: 233, 30, 99;
   --color-black: #172b4d;
