--- a/packages/preview/src/styles/_components.scss
+++ b/packages/preview/src/styles/_components.scss
@@ -162,6 +162,7 @@ a {
 
     .icon {
       min-height: 64px;
+      position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -171,6 +172,15 @@ a {
         0 1px 2px 0 rgba(0, 0, 0, 0.06);
       border: 2px solid transparent;
       font-size: 1.6em;
+
+      .download {
+        height: 16px;
+        color: rgba(0, 0, 0, 0.5);
+        position: absolute;
+        bottom: 4px;
+        right: 4px;
+        cursor: pointer;
+      }
     }
 
     &:hover {
