--- a/packages/preview-astro/src/layouts/Layout.astro
+++ b/packages/preview-astro/src/layouts/Layout.astro
@@ -10,39 +10,21 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <link rel="shortcut icon" href="favicon.png" />
+    <meta name="theme-color" content="#e91e63" />
+    <meta name="title" content="React Icons" />
+    <meta
+      name="description"
+      content="Include popular icons in your React projects easly with react-icons."
+    />
+    <meta name="keywords" content="React, Icons, Tree Shaking, SVG" />
+    <link rel="manifest" href="/manifest.json" />
   </head>
   <body>
     <slot />
   </body>
 </html>
 <style is:global>
-  :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
-    --accent-dark: 49, 10, 101;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
-      white 60%
-    );
-  }
-  html {
-    font-family: system-ui, sans-serif;
-    background: #13151a;
-    background-size: 224px;
-  }
-  code {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      Liberation Mono,
-      DejaVu Sans Mono,
-      Bitstream Vera Sans Mono,
-      Courier New,
-      monospace;
-  }
+  @import "../styles/global.scss";
 </style>
