--- a/packages/preview-astro/src/styles/_components.scss
+++ b/packages/preview-astro/src/styles/_components.scss
@@ -7,17 +7,18 @@ h1.main {
 }
 
 p,
-pre.code {
+pre.astro-code {
   margin-top: 0;
   padding-top: 0;
 }
 
-pre.code {
+pre.astro-code {
   border-radius: var(--border-radius-md);
   padding: var(--space-2);
   position: relative;
   overflow: auto;
 
+  // TODO current use shiki to highlight code
   .prism-code--copy {
     position: absolute;
     top: 0;
@@ -167,7 +168,8 @@ a {
       justify-content: center;
       background: var(--color-white);
       border-radius: var(--border-radius-md);
-      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+      box-shadow:
+        0 1px 3px 0 rgba(0, 0, 0, 0.1),
         0 1px 2px 0 rgba(0, 0, 0, 0.06);
       border: 2px solid transparent;
       font-size: 1.6em;
