--- a/packages/preview-astro/src/styles/_core.scss
+++ b/packages/preview-astro/src/styles/_core.scss
@@ -12,6 +12,7 @@
   --color-gray-1: #f4f5f7;
   --color-gray-2: #eaecef;
   --color-gray-3: #cbcdd4;
+  --color-gray-4: #808289;
   --sidebar-width: 18rem;
   --border-radius-md: 6px;
 }
