--- a/packages/preview-astro/src/pages/index.astro
+++ b/packages/preview-astro/src/pages/index.astro
@@ -2,6 +2,7 @@
 import { Code } from "astro:components";
 import Layout from "../layouts/Layout.astro";
 import Container from "../components/container.astro";
+import { IconList } from "../components/iconlist";
 
 const HOME_USAGE = `
 import { FaBeer } from 'react-icons/fa';
@@ -59,6 +60,9 @@ class Question extends React.Component {
 
     <h3>Usage</h3>
     <Code lang="jsx" code={HOME_USAGE_ALL} />
+
+    <h2>Include icon sets</h2>
+    <IconList client:idle />
 
     <h2>More info</h2>
     <p>
