--- a/packages/preview-astro/src/pages/search.astro
+++ b/packages/preview-astro/src/pages/search.astro
@@ -4,7 +4,7 @@ import { SearchPageComponent } from "../components/search";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title={`React icons search results`}>
+<Layout title={`React icons search results`} noindex>
   <Container title="🔍 Search">
     <SearchPageComponent client:load />
   </Container>
