--- a/packages/preview-astro/src/pages/index.astro
+++ b/packages/preview-astro/src/pages/index.astro
@@ -45,7 +45,7 @@ class Question extends React.Component {
     </p>
 
     <h2>Include icon sets</h2>
-    <IconList client:idle />
+    <IconList />
 
     <h2>Installation (for standard modern project)</h2>
     <Code lang="bash" code={`npm install react-icons --save`} />
