astro: detail modal

--- a/packages/preview-astro/src/layouts/Layout.astro
+++ b/packages/preview-astro/src/layouts/Layout.astro
@@ -37,7 +37,7 @@ const sortedManifest = IconsManifest.sort((a, b) =>
     <div class="sidebar pt3">
       <!-- <Heading isOpen={isOpen} setIsOpen={setIsOpen} /> -->
       <div class="brand">
-        <a href="/react-icons">
+        <a href="/react-icons/">
           <BrandIcon />
           <span>react-icons</span>
         </a>
@@ -67,7 +67,7 @@ const sortedManifest = IconsManifest.sort((a, b) =>
       <ul class="sidebar--links">
         <li>
           <!-- <ActiveLink href="/"> -->
-          <a class="rounded px2 py1" href="/react-icons">Home</a>
+          <a class="rounded px2 py1" href="/react-icons/">Home</a>
           <!-- </ActiveLink> -->
         </li>
         {
