--- a/packages/preview-astro/src/pages/index.astro
+++ b/packages/preview-astro/src/pages/index.astro
@@ -27,13 +27,18 @@ class Question extends React.Component {
   <Container title="React Icons">
     <p>
       <a href="https://www.npmjs.com/package/react-icons" rel="nofollow"
-        ><img src="https://img.shields.io/npm/v/react-icons.svg" alt="npm" /></a
+        ><img
+          src="https://img.shields.io/npm/v/react-icons.svg"
+          alt="npm"
+          height="20"
+        /></a
       >&emsp;<a
-        href="https://travis-ci.com/react-icons/react-icons"
+        href="https://github.com/react-icons/react-icons/actions"
         rel="nofollow"
         ><img
-          src="https://travis-ci.com/react-icons/react-icons.svg?branch=master"
-          alt="travis ci"
+          src="https://github.com/react-icons/react-icons/actions/workflows/nodejs.yml/badge.svg"
+          alt="GitHub Actions build status"
+          height="20"
         /></a
       >
     </p>
