astro: Keep focus search input in sidebar

--- a/packages/preview-astro/src/layouts/Layout.astro
+++ b/packages/preview-astro/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const sortedManifest = IconsManifest.sort((a, b) =>
     <ViewTransitions />
   </head>
   <body>
-    <div class="sidebar pt3">
+    <div transition:name="sidebar" transition:persist class="sidebar pt3">
       <!-- <Heading isOpen={isOpen} setIsOpen={setIsOpen} /> -->
       <div class="brand">
         <a href="/react-icons/">
