--- a/packages/preview-astro/src/styles/_components.scss
+++ b/packages/preview-astro/src/styles/_components.scss
@@ -260,7 +260,7 @@ a {
         0 1px 2px 0 rgba(0, 0, 0, 0.06);
       transition: background-color 150ms ease;
       &:hover {
-        background: #f3f3f3;
+        background: var(--color-gray-2);
       }
 
       .name {
@@ -333,6 +333,7 @@ html:has(.modal-root.active) {
         border: none;
         background: initial;
         padding: 0 10px;
+        color: var(--color-black);
       }
     }
   }
@@ -358,6 +359,7 @@ html:has(.modal-root.active) {
       button {
         border: none;
         background: var(--color-gray-2);
+        color: var(--color-black);
         padding: 5px 7px;
         border-radius: 5px;
         cursor: pointer;
