--- a/packages/preview-astro/src/styles/_core.scss
+++ b/packages/preview-astro/src/styles/_core.scss
@@ -20,7 +20,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --color-black: #ffffff;
-    --color-white: #404040;
+    --color-white: #3f3f46;
     --color-gray-0: #09090b;
     --color-gray-1: #18181b;
     --color-gray-2: #27272a;
