preview: Add trailing slash to URL

--- a/packages/preview-astro/src/layouts/Layout.astro
+++ b/packages/preview-astro/src/layouts/Layout.astro
@@ -65,7 +65,7 @@ const sortedManifest = IconsManifest.sort((a, b) =>
           sortedManifest.map((icon) => (
             <li>
               <a
-                href={`/react-icons/icons/${icon.id}`}
+                href={`/react-icons/icons/${icon.id}/`}
                 class={`rounded px2 py1${
                   activeIconSet === icon.id ? " active" : ""
                 }`}
