--- a/packages/preview/src/styles/_components.scss
+++ b/packages/preview/src/styles/_components.scss
@@ -167,7 +167,8 @@ a {
       justify-content: center;
       background: var(--color-white);
       border-radius: var(--border-radius-md);
-      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+      box-shadow:
+        0 1px 3px 0 rgba(0, 0, 0, 0.1),
         0 1px 2px 0 rgba(0, 0, 0, 0.06);
       border: 2px solid transparent;
       font-size: 1.6em;
