--- a/packages/preview-astro/src/styles/_components.scss
+++ b/packages/preview-astro/src/styles/_components.scss
@@ -288,12 +288,17 @@ a {
 html:has(.modal-root.active) {
   overflow: hidden;
 }
+
 .modal-root {
+  transition: all;
+  animation-duration: 250ms;
+
   & {
-    display: none;
-  }
-  &.active {
     display: block;
+  }
+
+  &.hidden {
+    display: none;
   }
 
   & > .overlay {
@@ -303,21 +308,40 @@ html:has(.modal-root.active) {
     z-index: 1000;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.3);
+    transition: all;
+    transition-duration: 250ms;
+
+    & {
+      background: rgba(0, 0, 0, 0.3);
+    }
+
+    &.appearing {
+      background: rgba(0, 0, 0, 0.01);
+    }
   }
+
   & > .modal-body {
     // show content in right side
+    transition: all;
+    transition-duration: 250ms;
     position: fixed;
     top: 0;
-    right: 0;
     z-index: 1001;
-    width: 50%;
+    width: 100%;
     max-width: 600px;
     height: 100%;
     background: var(--color-gray-0);
     padding: var(--space-3);
     overflow-y: auto;
     overflow-x: hidden;
+
+    &.open {
+      right: 0;
+    }
+
+    &.close {
+      right: -600px;
+    }
 
     & > .header {
       display: flex;
@@ -334,7 +358,7 @@ html:has(.modal-root.active) {
         font-size: 1.5rem;
         border: none;
         background: initial;
-        padding: 0 10px;
+        padding: 10px 20px;
       }
     }
   }
