--- a/packages/preview-astro/src/layouts/Layout.astro
+++ b/packages/preview-astro/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ interface Props {
 
 const { title, noindex, activeIconSet } = Astro.props;
 import { ViewTransitions } from "astro:transitions";
-import { IconsManifest } from "react-icons";
+import { IconsManifest } from "@e1himself/react-icons";
 import BrandIcon from "./icon.astro";
 import { SearchInput } from "../components/searchinput";
 
