--- a/packages/preview-astro/src/pages/icons/[name].astro
+++ b/packages/preview-astro/src/pages/icons/[name].astro
@@ -4,6 +4,7 @@ import Container from "../../components/container.astro";
 import Layout from "../../layouts/Layout.astro";
 import { IconSetViewer } from "../../components/iconset-viewer.tsx";
 import { IconsManifest } from "react-icons";
+import CopyTextWithIcon from "../../components/copyTextWithIcon.tsx";
 
 export async function getStaticPaths() {
   return Promise.all(
@@ -71,11 +72,7 @@ const { manifest } = Astro.props;
     </dl>
 
     <h2>Import</h2>
-    <Code
-      lang="jsx"
-      code={`import { IconName } from "react-icons/${manifest.id}";`}
-    />
-
+    <CopyTextWithIcon client:load text={`import ${`{ IconName }`} from "react-icons/${manifest.id}"`} />
     <IconSetViewer client:load iconSet={manifest.id} />
   </Container>
 </Layout>
