add border radius

--- a/packages/preview-astro/src/styles/_components.scss
+++ b/packages/preview-astro/src/styles/_components.scss
@@ -388,6 +388,7 @@ html:has(.modal-root.active) {
     margin-bottom: 2px;
     padding-left: 4px;
     padding-right: 4px;
+    border-radius: 7px;
     background-color: #24292e;
     align-items: center;
   }
