--- a/packages/preview-astro/src/styles/_core.scss
+++ b/packages/preview-astro/src/styles/_core.scss
@@ -15,6 +15,7 @@
   --color-gray-4: #808289;
   --sidebar-width: 18rem;
   --border-radius-md: 6px;
+  color-scheme: dark light;
 }
 
 html,
@@ -39,4 +40,34 @@ pre.astro-code {
   margin-top: 0;
   margin-bottom: var(--space-2);
   padding-top: var(--space-1);
+}
+
+// theme mode settings
+
+@media (prefers-color-scheme: light) {
+  .container,
+  .sidebar,
+  .modal-body,
+  .icon-detail-modal-content .icon,
+  .include-icon-sets .content .icon-set,
+  .sidebar--links li a,
+  .icons .item .icon,
+  .icon-detail-modal-content ul.copy li button {
+    color: black !important;
+    background-color: white !important;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .container,
+  .sidebar,
+  .modal-body,
+  .icon-detail-modal-content .icon,
+  .include-icon-sets .content .icon-set,
+  .sidebar--links li a,
+  .icons .item .icon,
+  .icon-detail-modal-content ul.copy li button {
+    color: white !important;
+    background-color: black !important;
+  }
 }
