--- a/packages/preview-astro/src/styles/_components.scss
+++ b/packages/preview-astro/src/styles/_components.scss
@@ -381,7 +381,7 @@ html:has(.modal-root.active) {
     padding: 10px;
     border-radius: 5px;
   }
-  ul.copy {
+  ul.copy, ul.actions {
     list-style: none;
     padding: 0;
     li {
@@ -392,8 +392,14 @@ html:has(.modal-root.active) {
         padding: 5px 7px;
         border-radius: 5px;
         cursor: pointer;
+        display: flex;
+        max-width: 100%;
         .text {
           margin-left: 5px;
+          flex: 1;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
       }
     }
